# shuba

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: rust.yml
src/: argument_parse.rs  cli.rs  errors.rs  handler.rs  macros.rs  main.rs  model.rs  parse.rs  traits.rs
src/handlers/: ddxs.rs  keryo.rs  mod.rs  shuba.rs  zhihu.rs
src/impls/: book_impl.rs  chapters_impl.rs  ddxs.rs  directory_impl.rs  keryo.rs  mod.rs  shuba.rs  zhihu.rs
src/router/: mod.rs
src/utils/: format.rs  mod.rs  progress.rs  tesseract.rs  text.rs
