[package]
name = "shuba"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.1", features = ["io-util", "rt", "macros"] }
proc-macro-workshop = {git = "https://github.com/ChengCY-2254/proc-macro-workshop.git",rev = "ea0ab17"}
futures = "0.3.30"
clap = "4.5.11"
indicatif = { version = "0.17.8" }
fantoccini = "0.21.0"
serde = "1.0.204"
serde_json = "1.0.122"
log = "0.4.22"
env_logger = "0.11.5"
epub-builder = "0.7.4"
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[features]
shuba = []
full = ["shuba"]

[build-dependencies]
chrono = "0.4.38"

