[package]
name = "shuba"
version = "0.2.2"
edition = "2021"
homepage = "https://github.com/ChengCY-2254/shuba"

[dependencies]
tokio = { version = "1.39.1", features = ["rt", "macros"] }
proc-macro-workshop = { git = "https://github.com/ChengCY-2254/proc-macro-workshop.git", rev = "cfb9742c" }
futures = "0.3.30"
clap = "4.5.11"
# 终端进度条
indicatif = { version = "0.17.8" }
# WebDriver
fantoccini = { version = "0.21.0", optional = true }
serde = "1.0.204"
serde_json = "1.0.122"
log = { version = "0.4.22" }
env_logger = { version = "0.11.5", optional = true }
chinese-number = { version = "0.7.7", optional = true, features = [
    "chinese-to-number",
] }
reqwest = { version = "0.12.5", optional = true }
url = "2.5.2"
thiserror = "1.0.63"
regex = { version = "1.10.6",optional = true }
lazy_static = { version = "1.5.0",optional = true }
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[features]
web-driver = ["fantoccini"]
request = ["reqwest"]
# 网站支持，可单独编译
#69书吧
shuba = ["web-driver"]
#第二书包网不知道盗了几版
keryo = ["chinese-number", "web-driver"]
#顶点小说网
ddxs = ["web-driver"]
# 暂时不想管理的代码
unstable = []
# 知乎
zhihu = ["web-driver","regex","lazy_static"]

full = ["shuba", "keryo", "ddxs","zhihu"]

release = ["shuba", "keryo", "ddxs"]

debug = ["full", "env_logger"]

[build-dependencies]
chrono = "0.4.38"

[patch.crates-io]
fantoccini = { git = "https://github.com/ChengCY-2254/fantoccini.git" }
